--- a/front-end/webapp/src/app/modules/turnos/dialogs/appointment/appointment.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/appointment/appointment.component.scss
@@ -55,9 +55,13 @@ mat-icon {
 		background-color: #D34444;
 	}
 
-	.attended {
+	.served {
 		background-color: #2687C5;
 	}
+}
+
+mat-form-field {
+	width: 100%;
 }
 
 section {
