--- a/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
@@ -102,14 +102,10 @@
 				</div>
 
 				<section>
-					<div fxLayout="row">
+					<div fxLayout="row" fxLayoutGap="15px">
 						<mat-checkbox (change)="autoRenewChange()"  [checked]="autoRenew">
 							<span [translate]="'Renovar automáticamente'"></span>
 						</mat-checkbox>
-					</div>
-				</section>
-				<section>
-					<div cfxLayout="row">
 						<mat-checkbox (change)="holidayWorkChange()" [checked]="holidayWork">
 							<span [translate]="'Atiende dias feriados'"></span>
 						</mat-checkbox>
