--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -15,7 +15,7 @@
 			<app-diagnosticos [(diagnosis)]="diagnosticos"></app-diagnosticos>
 		</section>
 
-		<section id="procedimientos" class="doc-section">
+		<section id="procedimientos" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
 			<app-document-section [sectionTitle]="'internaciones.anamnesis.procedimientos.TITLE'"
 				[tableTitle]="'internaciones.anamnesis.procedimientos.TABLE_TITLE'"
 				[columns]="procedimientosService.getColumns()"
