--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
@@ -7,6 +7,54 @@
 		<section id="diagnosticos" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
 			<app-diagnosticos [(diagnosis)]="diagnosticos"></app-diagnosticos>
 		</section>
+		<section id="procedimientos" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
+			<app-document-section [sectionTitle]="'internaciones.anamnesis.procedimientos.TITLE'"
+				[tableTitle]="'internaciones.anamnesis.procedimientos.TABLE_TITLE'"
+				[columns]="procedimientosService.getColumns()"
+				[data]="procedimientosService.getProcedimientos()">
+				<ng-container concept-form>
+					<app-concepts-search
+						*ngIf="!procedimientosService.getSnomedConcept() else procedimientoForm"
+						[label]="'internaciones.anamnesis.procedimientos.PROCEDIMIENTO'"
+						(search)="procedimientosService.openSearchDialog($event)">
+					</app-concepts-search>
+
+					<ng-template #procedimientoForm>
+						<form [formGroup]="procedimientosService.getForm()"
+							(ngSubmit)="procedimientosService.addToList()">
+							<mat-form-field appearance="outline">
+								<mat-label [translate]="'internaciones.anamnesis.procedimientos.TIPO'">
+								</mat-label>
+								<input id="procedimiento-input" matInput type="text" formControlName="snomed" name="snomed"
+									readonly matTooltip="{{procedimientosService.getSnomedConcept().pt }}">
+								<button id="clear-procedimiento" mat-button matSuffix color="warn" mat-icon-button
+									(click)="procedimientosService.resetForm()">
+									<mat-icon>close</mat-icon>
+								</button>
+							</mat-form-field>
+
+							<mat-form-field appearance="outline">
+								<mat-label [translate]="'internaciones.anamnesis.procedimientos.FECHA'">
+								</mat-label>
+								<input matInput id="fecha_procedimiento" [matDatepicker]="datePicker"
+									formControlName="fecha" [max]="procedimientosService.getFechaMax()">
+								<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+								<mat-datepicker #datePicker></mat-datepicker>
+							</mat-form-field>
+
+							<div align="end">
+								<button id="submit_procedimiento" class="uppercase" mat-raised-button color="primary"
+									type="submit">
+									<span
+										[translate]="'internaciones.anamnesis.procedimientos.buttons.ADD'"></span>
+								</button>
+							</div>
+
+						</form>
+					</ng-template>
+				</ng-container>
+			</app-document-section>
+		</section>
 		<section id="observations" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD','ENFERMERO']">
 			<h2 [translate]="'internaciones.anamnesis.observations.TITLE'"></h2>
 			<mat-card>
