--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -18,6 +18,14 @@
 								<span mat-line class="mat-body">
 									{{problem.startDate }}
 								</span>
+								<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" mat-icon-button [matMenuTriggerFor]="menu" >
+									<mat-icon>more_vert</mat-icon>
+								</button>
+								<mat-menu #menu="matMenu">
+									<button mat-menu-item (click)="goToNuevaConsulta(problem)">
+										<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"></span>
+									</button>
+								</mat-menu>
 							</mat-list-item>
 							<mat-divider></mat-divider>
 						</div>
@@ -52,6 +60,14 @@
 								<span mat-line class="mat-body">
 									{{problem.startDate }}
 								</span>
+								<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" mat-icon-button [matMenuTriggerFor]="menu" >
+									<mat-icon>more_vert</mat-icon>
+								</button>
+								<mat-menu #menu="matMenu">
+									<button mat-menu-item (click)="goToNuevaConsulta(problem)">
+										<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"> </span>
+									</button>
+								</mat-menu>
 							</mat-list-item>
 							<mat-divider></mat-divider>
 						</div>
@@ -60,7 +76,7 @@
 			</div>
 			<div fxFlex="25%">
 				<app-summary-card [header]="internacion" [editable]="false">
-					<mat-list id="lista-problemas-resueltos" *ngIf="(hospitalizationProblems$ | async)?.length > 0 else noInfo">
+					<mat-list id="lista-problemas-hospitalization" *ngIf="(hospitalizationProblems$ | async)?.length > 0 else noInfo">
 						<div fxLayout="row" *ngFor="let problem of (hospitalizationProblems$ | async)">
 							<mat-list-item>
 								<span mat-line class="capitalize-first-letter">
@@ -77,3 +93,4 @@
 			</div>
 	</section>
 </app-content>
+
