--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
@@ -46,7 +46,7 @@
 		<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TITLE'"
 			[tableTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TABLE_TITLE'"
 			[columns]="problemasNuevaConsultaService.getColumns()" [data]="problemasNuevaConsultaService.getProblemas()">
-			<div concept-form>
+			<div concept-form *ngIf="!this.readOnlyProblema else problemaForm">
 				<app-concepts-search *ngIf="!problemasNuevaConsultaService.getSnomedConcept() else problemaForm"
 					[label]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"
 					(search)="problemasNuevaConsultaService.openSearchDialog($event)">
@@ -55,20 +55,23 @@
 
 			<ng-template #problemaForm>
 				<form [formGroup]="problemasNuevaConsultaService.getForm()"
-					(ngSubmit)="problemasNuevaConsultaService.addToList()">
+					(ngSubmit)="this.readOnlyProblema ?
+					 problemasNuevaConsultaService.editProblem(): problemasNuevaConsultaService.addToList()">
 
 					<mat-form-field appearance="outline">
 						<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'">
 						</mat-label>
 						<input id="snomed-input" matInput type="text" formControlName="snomed" name="snomed" readonly
-							matTooltip="{{ problemasNuevaConsultaService.getSnomedConcept().pt }}">
+							matTooltip="{{ problemasNuevaConsultaService.getSnomedConcept().pt }}" *ngIf="!this.readOnlyProblema">
+						<input id="snomed-input-new-consultation" matInput type="text" formControlName="snomed" name="snomed" readonly
+							   *ngIf="this.readOnlyProblema">
 						<button id="clear" mat-button matSuffix color="warn" mat-icon-button
-							(click)="problemasNuevaConsultaService.resetForm()">
+							(click)="problemasNuevaConsultaService.resetForm()" *ngIf="!this.readOnlyProblema">
 							<mat-icon>close</mat-icon>
 						</button>
 					</mat-form-field>
 
-					<div class="margin-checkbox">
+					<div class="margin-checkbox" >
 						<mat-checkbox id="cronico-checkbox" formControlName="cronico">
 							<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CRONICO'"></span>
 						</mat-checkbox>
@@ -104,11 +107,18 @@
 						</mat-error>
 					</mat-form-field>
 
-					<div align="end">
+					<div align="end" *ngIf="!this.readOnlyProblema">
 						<button id="submit_problema" class="uppercase" mat-raised-button color="primary" type="submit">
 							<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.buttons.ADD'"></span>
 						</button>
 					</div>
+
+					<div align="end" *ngIf="this.readOnlyProblema" >
+						<button id="edit_problema" class="uppercase" mat-raised-button color="primary" type="submit">
+							<span [translate]="'ambulatoria.paciente.nueva-consulta.problemas.buttons.SAVE'"></span>
+						</button>
+					</div>
+
 
 				</form>
 			</ng-template>
