--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/bed-assignment/bed-assignment.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/bed-assignment/bed-assignment.component.html
@@ -9,14 +9,14 @@
             <mat-card id="bed-management-card">
                 <mat-card-content>
                     <div fxLayout="row">
-                        <div id="filtros" class="panel-filtro">
+                        <div id="filters" class="filter-panel">
                             <h2 class="mat-h2 page-title" [translate]="'gestion-camas.home.SUBTITLE'"></h2>
                             <mat-card-subtitle>
                                 <span *ngIf="bedManagementList" id="bed_id">Resultado: {{bedsAmount}} camas</span>
                             </mat-card-subtitle>
                             <app-bed-filters [filled]="filled"></app-bed-filters>
                         </div>
-                        <section class="beds" id="mapeo" *ngIf="bedManagementList && bedManagementList.length">
+                        <section class="beds" id="bed-mapping" *ngIf="bedManagementList && bedManagementList.length">
                             <app-bed-mapping [bedManagementList]="bedManagementList" (selectedBed)="onSelectBed($event)"></app-bed-mapping>
                         </section>
                         <section class="beds" *ngIf="bedManagementList && !bedManagementList.length" fxLayout="column" fxLayoutAlign="space-around center">
