tg-1495 [FE] Validar fecha minima de nueva agenda

--- a/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/new-agenda/new-agenda.component.html
@@ -82,7 +82,7 @@
 						</div>
 						<mat-form-field appearance="outline">
 							<input formControlName="startDate" id="startDate" matInput [matDatepicker]="initPicker"
-								(dateChange)="setAllWeeklyDoctorsOfficeOcupation()">
+								(dateChange)="setAllWeeklyDoctorsOfficeOcupation()" [min]="minDate">
 							<mat-datepicker-toggle matSuffix [for]="initPicker"></mat-datepicker-toggle>
 							<mat-datepicker #initPicker></mat-datepicker>
 						</mat-form-field>
