tg-1574. [FE] Desactivar acción de nueva consulta a partir de problema existente cuando no se tiene un turno confirmado

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -18,14 +18,16 @@
 								<span mat-line class="mat-body">
 									{{problem.startDate }}
 								</span>
-								<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" mat-icon-button [matMenuTriggerFor]="menu" >
-									<mat-icon>more_vert</mat-icon>
-								</button>
-								<mat-menu #menu="matMenu">
-									<button mat-menu-item (click)="goToNuevaConsulta(problem)">
-										<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"></span>
+								<ng-container *ngIf="hasConfirmedAppointment">									
+									<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" mat-icon-button [matMenuTriggerFor]="menu" >
+										<mat-icon>more_vert</mat-icon>
 									</button>
-								</mat-menu>
+									<mat-menu #menu="matMenu">
+										<button mat-menu-item (click)="goToNuevaConsulta(problem)">
+											<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"></span>
+										</button>
+									</mat-menu>
+								</ng-container>
 							</mat-list-item>
 							<mat-divider></mat-divider>
 						</div>
@@ -43,14 +45,17 @@
 								<span mat-line class="mat-body">
 									{{problem.startDate }}
 								</span>
-								<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" mat-icon-button [matMenuTriggerFor]="menu" >
-									<mat-icon>more_vert</mat-icon>
-								</button>
-								<mat-menu #menu="matMenu">
-									<button mat-menu-item (click)="goToNuevaConsulta(problem)">
-										<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"></span>
+
+								<ng-container *ngIf="hasConfirmedAppointment">	
+									<button *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" mat-icon-button [matMenuTriggerFor]="menu" >
+										<mat-icon>more_vert</mat-icon>
 									</button>
-								</mat-menu>
+									<mat-menu #menu="matMenu">
+										<button mat-menu-item (click)="goToNuevaConsulta(problem)">
+											<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"></span>
+										</button>
+									</mat-menu>
+								</ng-container>
 							</mat-list-item>
 							<mat-divider></mat-divider>
 						</div>
@@ -68,11 +73,13 @@
 								<span mat-line class="mat-body">
 									{{problem.startDate }}
 								</span>
-								<mat-menu #menu="matMenu">
-									<button mat-menu-item (click)="goToNuevaConsulta(problem)">
-										<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"> </span>
-									</button>
-								</mat-menu>
+								<ng-container *ngIf="hasConfirmedAppointment">
+									<mat-menu #menu="matMenu">
+										<button mat-menu-item (click)="goToNuevaConsulta(problem)">
+											<span [translate]="'ambulatoria.paciente.nueva-consulta.TITLE_MENU'"> </span>
+										</button>
+									</mat-menu>
+								</ng-container>
 							</mat-list-item>
 							<mat-divider></mat-divider>
 						</div>
