tg-1682 Refactor de clases por datos innecesarios para informacion de paciente encontrado en nuevo turno

--- a/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
@@ -64,7 +64,7 @@
 					<mat-list-item id="patient">
 						<mat-icon color="primary" mat-list-icon [inline]="true">person</mat-icon>
 						<div fxLayout="column">
-							<strong> {{patientAppointmentDto?.person.firstName}} {{patientAppointmentDto?.person.lastName}} - {{patientAppointmentDto?.person.identificationNumber}} </strong>
+							<strong> {{person?.firstName}} {{person?.lastName}} - {{person?.identificationNumber}} </strong>
 						</div>
 					</mat-list-item>
 				</mat-list>
